--- a/core/cat/routes/static/core_static_folder/auth/login.html
+++ b/core/cat/routes/static/core_static_folder/auth/login.html
@@ -11,7 +11,7 @@
     <form action="/auth/redirect" method="POST">
         <img id="logo" src="[[ url_for('core-static', path='/img/logo.svg') ]]">
         <div>
-            <input type="text" id="username" name="username" required autofocus placeholder="Username">
+            <input type="text" id="username" name="username" required autofocus placeholder="Nome Utente">
         </div>
         <div>
             <input type="password" id="password" name="password" required placeholder="Password">
@@ -23,12 +23,12 @@
             <button type="submit">Login</button>
         </div>
         {% if show_default_passwords %}
-            Default users included out of the box:
+            Utente default:
             <ul>
                 <li>admin:admin</li>
                 <li>user:user</li>
             </ul>
-            Change their passwords after initial login as admin.    
+            Cambia la password dopo il login.    
         {% endif %}
         <div>
         </div>
